modify something test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>XXX</title>
 </head>
 <body>
-  <h1 style="color:red">弘扬社会主义核心价值观</h1>
+  <h1 style="color:red">弘扬社会主义核心价值观！</h1>
 </body>
 </html>
