--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="resources/css/styles.css">
   <title>XXX</title>
 </head>
 <body>
-  <h1 style="color:red">弘扬社会主义核心价值观！</h1>
+  <h1>弘扬社会主义核心价值观！</h1>
+  <div class="box">
+    <img src="resources/img/xidada.jpg" alt="xida">
+  </div>
 </body>
 </html>
